<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/Illinois"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="90dp">

            <TextView
            android:id="@+id/gratefulText"
            android:layout_gravity="center"
            android:text="@string/greateful_text"
            android:textSize="19sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-black"
        android:text="@string/get_strated_text"
        android:textColor="@color/purple_700" />




</LinearLayout>